hugr-llvm/src/extension/snapshots/hugr_llvm__extension__float__test__fmul@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/float.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal double @_hl.main.1(double %0, double %1) {
alloca_block:
  %"0" = alloca double, align 8
  %"2_0" = alloca double, align 8
  %"2_1" = alloca double, align 8
  %"4_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, ptr %"2_0", align 8
  store double %1, ptr %"2_1", align 8
  %"2_01" = load double, ptr %"2_0", align 8
  %"2_12" = load double, ptr %"2_1", align 8
  %2 = fmul double %"2_01", %"2_12"
  store double %2, ptr %"4_0", align 8
  %"4_03" = load double, ptr %"4_0", align 8
  store double %"4_03", ptr %"0", align 8
  %"04" = load double, ptr %"0", align 8
  ret double %"04"
}
